--- a/Dicee/Base.lproj/Main.storyboard
+++ b/Dicee/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                     <color key="titleColor" red="0.97685765673136582" green="1" blue="0.97249039627293621" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cro-Qb-3Cq"/>
+                                    <action selector="rollButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lUE-Vg-8Xj"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -51,9 +51,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="diceButton" destination="XhW-to-jNo" id="Jin-xE-Po3"/>
-                        <outlet property="diceImageView1" destination="DOB-Ol-ztM" id="0yK-N3-YWf"/>
-                        <outlet property="diceImageView2" destination="hSW-1g-Ida" id="OeS-yY-Epj"/>
+                        <outlet property="diceImage1" destination="DOB-Ol-ztM" id="7Pc-Z5-b5S"/>
+                        <outlet property="diceImage2" destination="hSW-1g-Ida" id="Ezi-gZ-xxW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
